--- a/src/components/score/css/Score.module.scss
+++ b/src/components/score/css/Score.module.scss
@@ -1,5 +1,12 @@
 // Testing:
 
-// .score {
-//   color: red;
-// }
+.score {
+  position: relative;
+  top: 40%;
+  -webkit-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  text-align: center;
+  text-align: center;
+  font-size: 7rem;
+}
