--- a/src/App.scss
+++ b/src/App.scss
@@ -34,10 +34,16 @@ main {
   height: 100vh;
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+.centerWrapper {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  order: 1;
 }
 
 .highlight {
   background-color: yellow;
 }
-
-// popup:   font-family: 'Rubik', sans-serif !important;
