--- a/src/components/wordChanger/css/WordChanger.module.scss
+++ b/src/components/wordChanger/css/WordChanger.module.scss
@@ -1,8 +1,6 @@
 .wordList {
-  position: relative;
-  top: 30%;
-  -webkit-transform: translateY(-50%);
-  -ms-transform: translateY(-50%);
-  transform: translateY(-50%);
   text-align: center;
+  order: 1;
+  margin-right: auto;
+  margin-left: auto;
 }
