styled main components

--- a/src/components/wordPreview/css/WordPreview.module.scss
+++ b/src/components/wordPreview/css/WordPreview.module.scss
@@ -1,9 +1,8 @@
 .secondWord {
   font-size: 5rem;
-  display: inline;
+  margin-bottom: -1rem;
 }
 
 .thirdWord {
   font-size: 4rem;
-  display: inline;
 }
