--- a/src/App.scss
+++ b/src/App.scss
@@ -35,12 +35,14 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: space-between;
 }
 
 .centerWrapper {
   display: flex;
   width: 100%;
   justify-content: space-between;
+  margin-top: -5%;
   order: 1;
 }
 
