--- a/src/components/difficulty/css/Difficulty.module.scss
+++ b/src/components/difficulty/css/Difficulty.module.scss
@@ -15,4 +15,9 @@
   font-size: 4rem;
   margin-bottom: 2rem;
   padding: 1rem 2rem;
+  transition: color 0.2s ease-in-out;
+
+  &:hover {
+    color: $red;
+  }
 }
