--- a/src/components/popup/css/Popup.module.scss
+++ b/src/components/popup/css/Popup.module.scss
@@ -12,3 +12,15 @@
 .body {
   font-size: 3rem;
 }
+
+.fadeIn {
+  animation: fadeIn 0.3s;
+}
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
