--- a/src/components/timer/css/Timer.module.scss
+++ b/src/components/timer/css/Timer.module.scss
@@ -1,7 +1,14 @@
-.timer {
+@import '../../../App.scss';
+
+.timer,
+.timerLow {
   text-align: center;
   font-size: 8rem;
   order: 0;
+}
+
+.timerLow {
+  color: $red;
 }
 
 .timerBtn {
