--- a/src/components/timer/css/Timer.module.scss
+++ b/src/components/timer/css/Timer.module.scss
@@ -13,7 +13,8 @@
 
 .timerBtn {
   display: block;
-  margin-left: auto;
-  margin-right: auto;
+  padding: 1rem;
+  font-size: 1.5rem;
+  margin: 0 auto 4rem auto;
   text-align: center;
 }
