--- a/src/App.scss
+++ b/src/App.scss
@@ -48,6 +48,18 @@ mark {
   display: flex;
   width: 100%;
   justify-content: space-between;
-  margin-top: -4%;
+  margin-top: 2rem;
   order: 1;
+}
+
+@media only screen and (max-width: 1650px) {
+  .centerWrapper {
+    margin-top: 3.5rem;
+  }
+}
+
+@media only screen and (max-width: 1150px) {
+  .centerWrapper {
+    margin-top: 4rem;
+  }
 }
