--- a/src/components/wordPreview/css/WordPreview.module.scss
+++ b/src/components/wordPreview/css/WordPreview.module.scss
@@ -6,3 +6,23 @@
 .thirdWord {
   font-size: 4rem;
 }
+
+@media only screen and (max-width: 1650px) {
+  .secondWord {
+    font-size: 4rem;
+  }
+
+  .thirdWord {
+    font-size: 3rem;
+  }
+}
+
+@media only screen and (max-width: 1150px) {
+  .secondWord {
+    font-size: 2.8rem;
+  }
+
+  .thirdWord {
+    font-size: 2rem;
+  }
+}
