added favicon, changed mobile viewport styling

--- a/src/App.scss
+++ b/src/App.scss
@@ -74,6 +74,8 @@ mark {
   }
   body::after {
     height: 100vh;
+    width: 100vw;
+    max-width: 100vw;
     display: flex;
     align-items: center;
     justify-content: center;
