--- a/client/src/components/popup/css/Popup.module.scss
+++ b/client/src/components/popup/css/Popup.module.scss
@@ -1,8 +1,8 @@
-.modal {
-	color: black;
-	font-family: 'Rubik', sans-serif;
-	text-align: center;
-}
+// .modal {
+// 	color: black;
+// 	font-family: 'Rubik', sans-serif;
+// 	text-align: center;
+// }
 
 .title {
 	margin-left: 30%;
@@ -11,4 +11,34 @@
 
 .body {
 	font-size: 3rem;
+}
+
+.backdrop {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.5);
+	z-index: 1;
+}
+
+.modal {
+	max-width: 400px;
+	color: black;
+	font-family: 'Rubik', sans-serif;
+	text-align: center;
+	margin: 0 auto;
+	padding: 40px 20px;
+	background: white;
+	border-radius: 10px;
+	text-align: center;
+}
+.modal button {
+	font-weight: bold;
+	margin-top: 20px;
+}
+.modal p {
+	color: #444;
+	font-weight: bold;
 }
