--- a/client/src/components/popup/css/Popup.module.scss
+++ b/client/src/components/popup/css/Popup.module.scss
@@ -1,9 +1,3 @@
-// .modal {
-// 	color: black;
-// 	font-family: 'Rubik', sans-serif;
-// 	text-align: center;
-// }
-
 .title {
 	margin-left: 30%;
 	font-size: 3rem;
@@ -34,10 +28,24 @@
 	border-radius: 10px;
 	text-align: center;
 }
-.modal button {
-	font-weight: bold;
-	margin-top: 20px;
+
+.buttons {
+	margin-top: 1rem;
 }
+
+.button {
+	border: none;
+	display: inline-block;
+	background-color: #1863f9;
+	padding: 0.5rem 1rem;
+	border-radius: 8px;
+	color: #fffef5;
+}
+
+.button:first-child {
+	margin-right: 1rem;
+}
+
 .modal p {
 	color: #444;
 	font-weight: bold;
